Print a warning about SecurityManager being deprecated