@@ -136,36 +136,38 @@ public class ExecuteMojo extends AbstractToolsMojo {
             getLog().debug("Unable to log project test classpath");
         }
 
-        if (groovyVersionSupportsAction()) {
-            final SecurityManager sm = System.getSecurityManager();
-            try {
-                if (!allowSystemExits) {
-                    System.setSecurityManager(new NoExitSecurityManager());
-                }
-
-                // get classes we need with reflection
-                Class<?> groovyShellClass = classWrangler.getClass("groovy.lang.GroovyShell");
-
-                // create a GroovyShell to run scripts in
-                Object shell = setupShell(groovyShellClass);
-
-                // run the scripts
-                executeScripts(groovyShellClass, shell);
-            } catch (ClassNotFoundException e) {
-                throw new MojoExecutionException("Unable to get a Groovy class from classpath (" + e.getMessage() + "). Do you have Groovy as a compile dependency in your project or the plugin?", e);
-            } catch (InvocationTargetException e) {
-                throw new MojoExecutionException("Error occurred while calling a method on a Groovy class from classpath.", e);
-            } catch (InstantiationException e) {
-                throw new MojoExecutionException("Error occurred while instantiating a Groovy class from classpath.", e);
-            } catch (IllegalAccessException e) {
-                throw new MojoExecutionException("Unable to access a method on a Groovy class from classpath.", e);
-            } finally {
-                if (!allowSystemExits) {
-                    System.setSecurityManager(sm);
-                }
-            }
-        } else {
+        if (!groovyVersionSupportsAction()) {
             getLog().error("Your Groovy version (" + classWrangler.getGroovyVersionString() + ") doesn't support script execution. The minimum version of Groovy required is " + minGroovyVersion + ". Skipping script execution.");
+            return;
+        }
+
+        final SecurityManager sm = System.getSecurityManager();
+        try {
+            if (!allowSystemExits) {
+                getLog().warn("This feature relies on Java's SecurityManager, which is deprecated for removal in Java 17. Java 18 and later will require `-Djava.security.manager=allow` be used to continue using this feature.");
+                System.setSecurityManager(new NoExitSecurityManager());
+            }
+
+            // get classes we need with reflection
+            Class<?> groovyShellClass = classWrangler.getClass("groovy.lang.GroovyShell");
+
+            // create a GroovyShell to run scripts in
+            Object shell = setupShell(groovyShellClass);
+
+            // run the scripts
+            executeScripts(groovyShellClass, shell);
+        } catch (ClassNotFoundException e) {
+            throw new MojoExecutionException("Unable to get a Groovy class from classpath (" + e.getMessage() + "). Do you have Groovy as a compile dependency in your project or the plugin?", e);
+        } catch (InvocationTargetException e) {
+            throw new MojoExecutionException("Error occurred while calling a method on a Groovy class from classpath.", e);
+        } catch (InstantiationException e) {
+            throw new MojoExecutionException("Error occurred while instantiating a Groovy class from classpath.", e);
+        } catch (IllegalAccessException e) {
+            throw new MojoExecutionException("Unable to access a method on a Groovy class from classpath.", e);
+        } finally {
+            if (!allowSystemExits) {
+                System.setSecurityManager(sm);
+            }
         }
     }
 
